# cpp-stella-typechecker

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  test.stella
.cache/clangd/index/: main.cpp.649E3C92C55B3244.idx
src/: main.cpp
src/antlr4/: stellaParser.g4
src/antlr4/.antlr/: stellaLexer.java  stellaParser.interp  stellaParser.java  stellaParserBaseListener.java  stellaParserListener.java
